<resources>
    <string name="app_name">FirstProgram</string>
    <string name="title">Tính toán với hai số nguyên</string>
    <string name="number1">Số nguyên 1</string>
    <string name="number2">Số nguyên 2</string>
    <string name="result">Kết quả</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="devide">/</string>
    <string name="multi">*</string>
</resources>