<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:weightSum="10"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#FF0000"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/number1">
        <EditText
            android:textSize="26sp"
            android:inputType="number"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/txtX"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/number2">
        <EditText
            android:textSize="26sp"
            android:inputType="number"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/txtY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtResult"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:text="@string/result"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:layout_marginStart="5dp"
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:layout_marginStart="10dp"
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:layout_marginStart="10dp"
            android:id="@+id/btnDevide"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button"
            android:text="@string/devide"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
        <Button
            android:layout_marginStart="10dp"
            android:id="@+id/btnMulti"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button"
            android:text="@string/multi"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
        <Button
            android:layout_marginStart="10dp"
            android:id="@+id/btnDevide2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button"
            android:text="%"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>